# SAL

./: .gitignore  CMakeLists.txt  README.md  arm-none-eabi-toolchain.cmake  flash.sh  makefile  setup_WIP.py
Kernel/Inc/: main.h
Kernel/Inc/utils/: GPIO.h  RCC.h  UART.h  container.h  memory.h
Kernel/Src/: main.cpp
Kernel/Src/utils/: GPIO.c  RCC.c  UART.c  memory.c
Kernel/Startup/: crt.s  linker.ld
SAL/: makefile
SAL/Inc/: GPIO.h  container.h  main.h
SAL/Inc/utils/: GPIO.h  RCC.h  UART.h  container.h
SAL/Src/: GPIO.c  main.c  main.cpp
SAL/Src/utils/: GPIO.c  RCC.c  UART.c
SAL/Startup/: crt.s
docs/report/: CRT.md  GPIO.md  Linker.md  RCC.md  UART.md
minkyOS/: makefile
minkyOS/Inc/: main.h
minkyOS/Inc/utils/: clock.h  container.h  gpio.h  uart.h
minkyOS/Src/: crt.s  main.c
minkyOS/Src/utils/: clock.c  gpio.c  uart.c
setup/: clock.txt
